--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
+    <a href="recipes/banana-pudding.html" target="_blank" rel="noopener noreferrer">Banana Pudding</a>
+    <a href="recipes/peach-cobbler.html" target="_blank" rel="noopener noreferrer">Peach Cobbler</a>
 </body>
 </html>
